--- a/sphinx_simplepdf/themes/simplepdf_theme/cover.html
+++ b/sphinx_simplepdf/themes/simplepdf_theme/cover.html
@@ -10,7 +10,7 @@
     <div class="cover-middle">
       <div class="title">
         <h1 class="title-cover">{{ project|striptags|e }}</h1>
-        <p class="subtitle-cover">Version {{ version }}</p>
+        <p class="subtitle-cover">{{ version }}</p>
         <span class="meta">
           {{ cover_meta_data }}
         </span>
